# nunyakata

./: CODE_OF_CONDUCT.md  Makefile  PR_DESCRIPTION.md  README.md  TEST_RUNNERS.md  bandit-report.json  debug_sms_api.py  demo_complete.py  demo_complete_final.py  mkdocs.yml  pyproject.toml  release.py  requirements-dev.txt  requirements.txt  run_tests.py  test.sh  test_api_paths.py  test_domains.py  test_methods.py  test_payment.py  test_post_sms.py  test_sms_url.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  index.md
docs/getting-started/: quickstart.md
docs/services/: nalo-solutions.md
src/nunyakata/: __init__.py  config.py
src/nunyakata/services/: __init__.py  nalo_solutions.py
src/nunyakata/services/appsNmobile/: apps_n_mobile.py
tests/: test_client.py  test_config.py  test_nalo_email.py  test_nalo_payments.py  test_nalo_payments_fixed.py  test_nalo_sms.py  test_nalo_solutions.py  test_nalo_ussd.py  test_nalo_ussd_fixed.py
