[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nunyakata"
dynamic = ["version"]
description = "A unified Python package for Ghana-specific services and APIs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "nunyakata@seveightech.com.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ghana", "api", "services", "unified"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SeveighTech/nunyakata"
Repository = "https://github.com/SeveighTech/nunyakata"
Issues = "https://github.com/SeveighTech/nunyakata/issues"

[tool.hatch.version]
path = "src/nunyakata/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nunyakata"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=nunyakata --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
